src/App.scss
.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  height: 100vh;


main {
  display: flex;
  flex: 1 0 auto;
  > div {
    flex: 1 1 50%;
    background-color: #eee;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;

    textarea {
      flex:1 1 100%;
      padding: 1em;
      &:focus {
        box-shadow: inset 0 0 4px rgba(#22f,.8);
      }
    }

    .panel {
      text-align: left;
      padding: .1em 1em;
      header {
        font-weight: bold;
        font-size: 1.1em;
      }
        ul {
          list-style: none;
          li {
            &.active {
              font-weight: bold;
            }
          }
        }
      &.panel-settings {
        label {
          display: block;
          small {
            display: block;
            font-style: italic;
            padding-left: 1em;
          }
        }
      }
    }

    & + div {
      margin-left: 1vw;
      &::before {
        content: '»»';
        position: absolute;
        left:50%;
        z-index: 1;
        margin: -1em;
        top:50%;
        height: 2em;
        line-height: 2em;
        width: 2em;
        font-size: 1rem;
        background-color: #fff;
        box-shadow: inset 1px 1px 1px #fff, 1px 1px 1px #000;
        border-radius: 50%;
      }
    }
    &:not(.html) div.html {display: none;}
    &.html {
      justify-content: center;
      textarea {
        display: none;
      }
      div.html {
        display: block;
        padding: 1em 0;
        flex:1;
        border-bottom: 1px solid #000;
        }
    }
    .wrapper {
      flex: 1;
      position: relative;
      display: flex;
      
    }
      div.settings {
        text-align: left;
      }
      .btn-copy {
        position: absolute;
        bottom: 1em;
        right: 1em;
        .success-mark {
          display: none;
        }
        &.success .success-mark {
          display: inline-block;
        }
      }

  }
}

}

.App-header {
  background-color: #282c34;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  color: white;
  height: 6vmin;
  h1 {
    padding: 0;
    margin: auto;
  font-size: calc(5px + 2vmin);
  min-height: calc(10px + 2vmin);
  line-height: calc(10px + 2vmin);
  }
  button.switch {
    position: absolute;
    top:1.5vh;
    right:1vw;
    font-size:calc(5px + 1vmin);
  height: calc(10px + 2vmin);
  min-height: calc(7px + 1vmin);
  line-height: calc(7px + 1vmin);
  padding: 0 1em;
  span.switcher {
    display: inline-block;
    margin: 0 5px 0;
    width: 2em;
    height: .8em;
    // height: 7px;
    border: 1px solid #000;
    background-color: #fff;
    border-radius: 6px;
    position: relative;
    &:before {
      content: '';
      display: block;
      // width: 5px;
      // height: 5px;
      width: .6em;
      height: .6em;
      border-radius: 50%;
      border: 1px solid #000;
      background-color: #000;
      position: absolute;
      left: 0;
      top: 0px;
    }
    &.switch-right {
    background-color: #eee;
      &:before {
        left: auto;
        right: 0;
      }
    }
  }
  }

}

